--- a/s2-first_draft/style.css
+++ b/s2-first_draft/style.css
@@ -11,10 +11,6 @@ body {
     height: 100vh;
 }
 
-/* body > div {
-    height: 100%;
-}*/
-
 h2 {
     font-size: 34px;
 }
@@ -45,6 +41,84 @@ h3 {
 
 fieldset {
     border: none;
+}
+
+/* ------------ Page de connexion ------------ */
+
+.loginWrap {
+    width: inherit;
+    text-align: center;
+}
+
+.loginIut {
+    height: 130px;
+    display: inline-block;
+}
+
+.loginWrap .ui-widget {
+    width: 40%;
+    margin: 0 auto;
+}
+
+
+.loginSeprote {
+    height: 60px;
+    left: 0;
+    position: absolute;
+}
+
+.loginIutImg {
+    margin: 10px 0 75px;
+}
+
+.form_connex {
+    background-color: white;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.form_connex #loginForm {
+    display: block;
+}
+
+.form_connex input {
+    border: none;
+    border-bottom: 1px black solid;
+    margin: 40px auto;
+    display: block;
+    font-size: 32px;
+}
+
+.form_connex button {
+    background-color: #00AFF1;
+    color: white;
+    font-size: 24px;
+    font-family: Arial, sans-serif;
+    width: 100%;
+    padding: 0;
+    border: none!important;
+    transition: 0.25s ease all;
+}
+
+.form_connex button:hover {
+    background-color: rgba(0, 0, 255, 0.5);
+    letter-spacing: 7.5;
+}
+
+
+.ui-corner-all {
+    border-radius: 0;
+}
+
+.ui-state-error {
+    position: inherit;
+    padding: 10px 25px!important;
+    border: none;
+    background: rgba(232, 74, 95, 0.3);
+    color: #2a363b;
+    box-shadow: 0 0px 15px 0px rgba(20, 20, 20, 0.25);
+    margin-top: 50px;
+    animation: errorFadeIn ease-out 0.5s;
 }
 
 /* Change Calendar Button */
@@ -237,183 +311,7 @@ input[type='button']:active {
     transform: scale(0.85);
 }
 
-/* ----- Gestion des comptes ----- */
-
-.accInput {
-    margin: 20px auto 0 auto;
-    background-color: #fff;
-    padding: 10px 0;
-}
-
-.accInput input,
-.accInput select {
-    margin: 0 5px;
-}
-
-.submitBtn {
-    padding: 3px 7px;
-}
-
-table#ListeComptes {
-    margin: 20px auto 0 auto;
-}
-
-.sep_table tr:nth-child(odd) {
-    background-color: rgba(235, 235, 235, 1);
-}
-
-.sep_table tr:nth-child(even) {
-    background-color: rgba(255, 255, 255, 1);
-}
-
-.sep_table th {
-    background-color: #00AFF1;
-    color: white;
-}
-
-.sep_table th,
-.sep_table td {
-    padding-left: 10px;
-    height: 36px;
-}
-
-.ui-widget.ui-widget-content {
-    border: none;
-    padding: 0;
-    borde- border-radius: 5px;
-}
-
-.ui-dialog-titlebar button {
-    display: none;
-}
-
-.form-check {
-    padding-top: 10px;
-}
-
-.form-check label {
-    margin: 0;
-}
-
-/* GestionHeure */
-
-.formHour button {
-    padding: 20px 20px 10px 20px;
-    margin: 0 10px;
-}
-
-.formHour {
-    border: 4px solid #00AFF1;
-    width: 450px;
-    margin: 20px auto 40px auto;
-    padding: 20px 0 10px 0;
-    text-align: center;
-}
-
-/* GestionProgrammes */
-
-.gestProgBtn {
-    margin: 20px auto 0 auto;
-}
-
-.gestProgBtn button,
-.GEST_PROG input[type='button'] {
-    padding: 20px 20px 10px 20px;
-    margin: 0 10px;
-}
-
-.GEST_PROG a {
-    color: #0099ff;
-    transition: color 0.1s linear;
-}
-
-.GEST_PROG a:hover {
-    color: #ff6600;
-}
-
-/*#create_prog*/
-
-.blueBorder {
-    border: 4px solid #00AFF1;
-    width: 450px;
-    margin: 0 auto 40px auto;
-    padding-bottom: 20px;
-}
-
-.actionList {
-    margin: 0 auto 40px auto;
-    text-align: center;
-}
-
-.actionList th {
-    font-size: 24px;
-    padding: 10px 0;
-}
-
-.actionList tr td input:nth-child(2) {
-    margin: 0 30px;
-}
-
-/* Visualisation Programme */
-
-.visualMain {
-    width: 80%;
-    margin: 30px auto 0 auto;
-}
-
-.visualMain tr {
-    margin: 0 auto;
-    display: table;
-    width: 100%;
-    vertical-align: middle;
-    text-align: center;
-}
-
-.visualMain th {
-    padding: 1px 20px;
-}
-
-.visualMain td {
-    padding: 1px 20px;
-    width: 20%;
-}
-
-.visualSem {
-    height: 60px;
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.visualPer {
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.visualValNames {
-    height: 30px;
-    background-color: rgba(0, 0, 0, 0.15);
-}
-
-.visualValues {
-    height: 30px;
-    background-color: rgba(0, 0, 0, 0.15);
-}
-
-/*END MAIN*/
-
-footer {
-    display: block;
-    position: fixed;
-    bottom: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 0 10px;
-}
-
-footer .separator {
-    margin: 0 5px;
-}
-
-/* ----- Liste des programmes (NEW) ----- */
+/* ----- Liste des programmes ----- */
 
 .main_content {
     display: flex;
@@ -485,10 +383,6 @@ img.editIcon {
     width: 25px;
 }
 
-/*img.editIcon:hover {
-    opacity: 0.5;
-}*/
-
 .table .treelist-history-back td {
     padding: 10px .75rem 5px;
     font-weight: bold;
@@ -537,4 +431,77 @@ img.editIcon {
 .list-item-add img {
     margin-bottom: 3px;
     margin-right: 5px;
+}
+
+/* ----- Gestion des comptes ----- */
+
+.accInput {
+    margin: 20px auto 0 auto;
+    background-color: #fff;
+    padding: 10px 0;
+}
+
+.accInput input,
+.accInput select {
+    margin: 0 5px;
+}
+
+.submitBtn {
+    padding: 3px 7px;
+}
+
+table#ListeComptes {
+    margin: 20px auto 0 auto;
+}
+
+.sep_table tr:nth-child(odd) {
+    background-color: rgba(235, 235, 235, 1);
+}
+
+.sep_table tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.sep_table th {
+    background-color: #00AFF1;
+    color: white;
+}
+
+.sep_table th,
+.sep_table td {
+    padding-left: 10px;
+    height: 36px;
+}
+
+.ui-widget.ui-widget-content {
+    border: none;
+    padding: 0;
+    borde- border-radius: 5px;
+}
+
+.ui-dialog-titlebar button {
+    display: none;
+}
+
+.form-check {
+    padding-top: 10px;
+}
+
+.form-check label {
+    margin: 0;
+}
+
+/* ----- Footer ----- */
+
+footer {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 0 10px;
+}
+
+footer .separator {
+    margin: 0 5px;
 }
