--- a/Seprote2_beta/style.css
+++ b/Seprote2_beta/style.css
@@ -87,25 +87,6 @@ h3 {
     text-shadow: 0 0 10px #333;
 }
 
-.ui-corner-all {
-    border-radius: 0;
-}
-
-.ui-state-error {
-    position: absolute;
-    bottom: 50px;
-    left: 10px;
-    padding: 10px 25px!important;
-    border-radius: 0;
-    border: none!important;
-    background: rgba(232, 74, 95, 0.3);
-    color: #2a363b;
-    box-shadow: 0 0px 15px 0px rgba(20, 20, 20, 0.25);
-    margin: 50px auto 0 auto;
-    width: 30%;
-    animation: errorFadeIn ease-out 0.5s;
-}
-
 fieldset {
     border: none;
 }
@@ -214,16 +195,13 @@ input[type='button']:active {
 /*MAIN*/
 
 .mainWrap {
-    /*    display: table;*/
     width: 100%;
     padding: 2vh 0 0 0;
     text-align: center;
 }
 
 .bonjour {
-    display: table-row;
-    width: inherit;
-    height: 40px;
+    margin-bottom: 30px;
     font-size: 300%;
 }
 
@@ -237,10 +215,8 @@ input[type='button']:active {
     width: 60%;
 }
 
-#left,
-#right {
+#left, #right {
     display: inline-block;
-    /*table-cell;*/
     vertical-align: middle;
 }
 
